# joey-agent

./: .env.example  Cargo.toml  LICENSE  PORTING.md  README.md  config.yaml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: hermes.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
crates/joey-agent-core/: Cargo.toml
crates/joey-agent-core/src/: agent.rs  events.rs  guidance.rs  lib.rs  prompt.rs  threat_scan.rs
crates/joey-agent-core/src/compression/: anchors.rs  breakdown.rs  catalog.rs  compressor.rs  engine.rs  estimator.rs  feedback.rs  loop_tests.rs  mod.rs  orchestrator.rs  summary.rs
crates/joey-cli/: Cargo.toml
crates/joey-cli/src/: auth_cmd.rs  commands.rs  config_cmd.rs  cron_cmd.rs  doctor_cmd.rs  main.rs  mcp_cmd.rs  model_catalog.rs  oneshot.rs  render.rs  repl.rs  secret_prompt.rs  setup_wizard.rs  skills_cmd.rs  slash.rs  tools_cmd.rs  tui.rs
crates/joey-core/: Cargo.toml
crates/joey-core/src/: auth_store.rs  branding.rs  config.rs  constants.rs  default_soul.rs  lib.rs  logging.rs  reasoning.rs  redact.rs  state.rs  theme.rs  time.rs  utils.rs
crates/joey-cron/: Cargo.toml
crates/joey-cron/src/: croniter.rs  jobs.rs  lib.rs  scheduler.rs
crates/joey-gateway/: Cargo.toml
crates/joey-gateway/src/: base.rs  config.rs  lib.rs  session.rs  whatsapp_identity.rs
crates/joey-mcp/: Cargo.toml
crates/joey-mcp/src/: config.rs  lib.rs  result.rs  schema.rs  security.rs
crates/joey-omo/: Cargo.toml
crates/joey-omo/examples/: test_omo_registry.rs
crates/joey-omo/src/: boulder.rs  categories.rs  goal.rs  intent_gate.rs  lib.rs  mode.rs  models.rs  notepad.rs  plan_parser.rs  team.rs
crates/joey-omo/src/agents/: mod.rs  registry.rs
crates/joey-omo/src/agents/prompts/: atlas.rs  explore.rs  hephaestus.rs  junior.rs  librarian.rs  metis.rs  mod.rs  momus.rs  multimodal.rs  oracle.rs  prometheus.rs  sisyphus.rs  ultrawork.rs
crates/joey-omo/tests/: verify_prompts.rs
crates/joey-orchestration/: Cargo.toml
crates/joey-orchestration/src/: delegation_tool.rs  lib.rs  manager.rs  subagent.rs  types.rs
crates/joey-orchestration/tests/: batch_resilience.rs  concurrency_limiter.rs  events.rs  interrupt.rs  isolation.rs  model_selection.rs  parallel_batch.rs
crates/joey-providers/: Cargo.toml
crates/joey-providers/src/: anthropic.rs  chat.rs  client.rs  copilot.rs  error.rs  lib.rs  profile.rs  request.rs  types.rs  zai.rs
crates/joey-speckit-ui/: Cargo.toml  README.md
crates/joey-speckit-ui/src/: commands.rs  conflict.rs  lib.rs  main.rs  model.rs  watcher.rs  writer.rs
crates/joey-speckit-ui/src/api/: mod.rs  rest.rs  ws.rs
crates/joey-speckit-ui/src/parser/: mod.rs  plan.rs  spec.rs  tasks.rs
crates/joey-speckit-ui/tests/: conflict_detection.rs  contract_analyze.rs  contract_clarify.rs  contract_execute.rs  contract_patch_spec.rs  contract_patch_task.rs  parser_roundtrip.rs  ws_run_execute.rs
crates/joey-speckit-ui/tests/common/: mod.rs
crates/joey-tools/: Cargo.toml
crates/joey-tools/src/: builtins.rs  context.rs  difflib.rs  fuzzy.rs  guards.rs  lib.rs  patch_parser.rs  pyjson.rs  registry.rs  sanitize.rs  storage.rs  toolsets.rs  truncate.rs  url_safety.rs  vcs.rs
crates/joey-tools/src/tools/: clarify_tool.rs  file_tools.rs  memory_tool.rs  mod.rs  process_tool.rs  session_search_tool.rs  skills_tool.rs  terminal_tool.rs  todo_tool.rs  web_tools.rs
crates/joey-tools/tests/: schema_snapshots.rs
crates/joey-tui/: Cargo.toml
crates/joey-tui/examples/: anim_stress.rs  stress.rs
crates/joey-tui/src/: anim.rs  app.rs  input.rs  lib.rs  state.rs  theme.rs  widgets.rs
crates/joey-tui/tests/: smoke.rs
docs/: README.md  agent-turn-loop.md  architecture.md
joey-agent-specs/.specify/: init-options.json  integration.json
joey-agent-specs/.specify/integrations/: hermes.manifest.json  speckit.manifest.json
joey-agent-specs/.specify/workflows/: workflow-registry.json
joey-agent/.specify/: feature.json  init-options.json
joey-agent/.specify/integrations/: hermes.manifest.json  speckit.manifest.json
joey-agent/.specify/memory/: constitution.md
joey-agent/.specify/templates/: plan-template.md  tasks-template.md
joey-agent/.specify/workflows/: workflow-registry.json
joey-agent/specs/001-tui-crush-parity/: data-model.md  plan.md  quickstart.md  research.md  spec.md
skills/apple/apple-notes/: SKILL.md
skills/apple/apple-reminders/: SKILL.md
skills/apple/findmy/: SKILL.md
skills/apple/imessage/: SKILL.md
skills/autonomous-ai-agents/claude-code/: SKILL.md
skills/autonomous-ai-agents/codex/: SKILL.md
skills/autonomous-ai-agents/joey-agent/: SKILL.md
skills/autonomous-ai-agents/opencode/: SKILL.md
skills/computer-use/: SKILL.md
skills/creative/architecture-diagram/: SKILL.md
skills/creative/ascii-art/: SKILL.md
skills/creative/ascii-video/: README.md
skills/creative/baoyu-infographic/: PORT_NOTES.md  SKILL.md
skills/creative/claude-design/: SKILL.md
skills/creative/comfyui/: SKILL.md
skills/creative/design-md/: SKILL.md
skills/creative/excalidraw/: SKILL.md
skills/creative/humanizer/: SKILL.md
skills/creative/p5js/: SKILL.md
skills/creative/popular-web-designs/: SKILL.md
skills/creative/pretext/: SKILL.md
skills/creative/sketch/: SKILL.md
skills/creative/touchdesigner-mcp/: SKILL.md
skills/data-science/jupyter-live-kernel/: SKILL.md
skills/dogfood/: SKILL.md
skills/dogfood/templates/: dogfood-report-template.md
skills/joey-desktop-plugins/: SKILL.md
skills/yuanbao/: SKILL.md
specs/001-speckit-visual-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-agentic-orchestration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-omo-orchestration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
web/speckit-ui/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/speckit-ui/src/: main.ts  (+2 more)
(+156 files in other folders)
