[workspace]
resolver = "2"
members = [
    "crates/joey-core",
    "crates/joey-providers",
    "crates/joey-tools",
    "crates/joey-agent-core",
    "crates/joey-cron",
    "crates/joey-mcp",
    "crates/joey-gateway",
    "crates/joey-cli",
]

[workspace.package]
version = "0.19.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/joey/joey-agent"
description = "joey-agent — the self-improving AI agent, in Rust. A port of Hermes Agent (Nous Research)."

[workspace.dependencies]
joey-core = { path = "crates/joey-core" }
joey-providers = { path = "crates/joey-providers" }
joey-tools = { path = "crates/joey-tools" }
joey-agent-core = { path = "crates/joey-agent-core" }
joey-cron = { path = "crates/joey-cron" }
joey-mcp = { path = "crates/joey-mcp" }
joey-gateway = { path = "crates/joey-gateway" }

anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
bytes = "1"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "socks"] }
ureq = { version = "2.12", features = ["json"] }
url = "2"
percent-encoding = "2"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.8"
os_pipe = "1"

clap = { version = "4", features = ["derive", "wrap_help"] }
reedline = "0.40"
nu-ansi-term = "0.50"
crossterm = "0.28"
terminal_size = "0.4"
unicode-width = "0.2"
textwrap = "0.16"

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

dirs = "6"
dotenvy = "0.15"
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
globset = "0.4"
ignore = "0.4"
shellexpand = "3"
shlex = "1"
which = "7"
tempfile = "3"

base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

portable-pty = "0.8"
sysinfo = "0.33"
libc = "0.2"

html2text = "0.13"
similar = "2"
strsim = "0.11"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1"
unicode-normalization = "0.1"

[profile.release]
lto = "thin"
strip = true

[profile.dev]
debug = 1
