[package]
name = "joey-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "joey"
path = "src/main.rs"

[dependencies]
joey-core.workspace = true
joey-providers.workspace = true
joey-tools.workspace = true
joey-agent-core.workspace = true
joey-cron.workspace = true
joey-mcp.workspace = true
joey-tui.workspace = true
joey-orchestration.workspace = true
crossterm.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
clap.workspace = true
reedline.workspace = true
nu-ansi-term.workspace = true
terminal_size.workspace = true
unicode-width.workspace = true
chrono.workspace = true
indexmap.workspace = true
which.workspace = true
reqwest.workspace = true
regex.workspace = true
once_cell.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
