[package]
name = "joey-cron"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
joey-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
uuid.workspace = true
regex.workspace = true
once_cell.workspace = true

[dev-dependencies]
tempfile.workspace = true
