[package]
name = "joey-cron"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
joey-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
uuid.workspace = true
regex.workspace = true
once_cell.workspace = true
tempfile.workspace = true
# Cross-process advisory flock for .jobs.lock / .tick.lock (port of fcntl.flock).
fs2 = "0.4"

[dev-dependencies]
