[package]
name = "joey-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
joey-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
