[package]
name = "joey-omo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
joey-core.workspace = true
joey-providers.workspace = true
joey-tools.workspace = true
joey-agent-core.workspace = true
joey-orchestration.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
