[package]
name = "joey-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
joey-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
reqwest.workspace = true
ureq.workspace = true
tokio.workspace = true
futures-util.workspace = true
async-trait.workspace = true
bytes.workspace = true
tracing.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
once_cell.workspace = true
rand.workspace = true
dirs.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
