[package]
name = "joey-speckit-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "joey-speckit-ui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
uuid.workspace = true
walkdir.workspace = true

axum = { version = "0.7", features = ["ws"] }
notify = "6"
notify-debouncer-mini = "0.4"
pulldown-cmark = "0.12"
tower = "0.5"

[dev-dependencies]
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest.workspace = true
futures-util.workspace = true
tokio-tungstenite = "0.23"
