[package]
name = "joey-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
joey-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
os_pipe.workspace = true
sha2.workspace = true
hex.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures-util.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex.workspace = true
walkdir.workspace = true
globset.workspace = true
ignore.workspace = true
similar.workspace = true
strsim.workspace = true
shlex.workspace = true
shellexpand.workspace = true
which.workspace = true
portable-pty.workspace = true
sysinfo.workspace = true
html2text.workspace = true
url.workspace = true
percent-encoding.workspace = true
base64.workspace = true
indexmap.workspace = true
once_cell.workspace = true
uuid.workspace = true
tempfile.workspace = true
libc.workspace = true
