[package]
name = "joey-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
joey-agent-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
unicode-width.workspace = true
textwrap.workspace = true

[dev-dependencies]
joey-providers.workspace = true
